# SSDD_MarceloChinarroCabrero_BlobService

./: README.md  persistencia.json  pyproject.toml  run_icestorm
IceStorm/: data.mdb  lock.mdb
config/: blob.config  datatransfer.config
icedrive_blob/: __init__.py  app.py  blob.py  command_line_handler.py  delayed_response.py  discovery.py
icedrive_blob/test/: test_blob.py
